TP7-Types/tests/bad/t06.ml
(* Incohérence UNIT vs INT *)
let a = () in print_int a ;;
